# conficus

./: .gitignore  .pypirc  HISTORY.md  HISTORY.rst  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  TODO.md  bitbucket-pipelines.yml  dev_requirements.txt  lint  make_docs.sh  publish.sh  pyproject.toml  requirements-dev.txt  requirements-tox.txt  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  coercion.rst  conf.py  docs-sample.ini  index.rst  inheritance.rst  mkdocs.yml  nested-sections.rst  sample-doc.rst  sync.sh  toc.rst
docs/_static/: custom.css
docs/custom_theme/: main.html
docs/custom_theme/highlight/: highlight.pack.js
docs/custom_theme/js/: conficus.js
docs/docs/: about.md  coercion.md  features.md  index.md  inheritance.md  nested-sections.md  release-history.md
ficus/: __init__.py  __origin__.py  coerce.py  format.py  parse.py
src/conficus/: __init__.py  coerce.py  format.py  inherit.py  parse.py  readonly.py  structs.py  toml.py  walk.py
src/conficus.egg-info/: PKG-INFO  SOURCES.txt
test/: config.txt  conftest.py  test_coerce.py  test_coerce_custom.py  test_configdict.py  test_configvalue.py  test_dict.py  test_ficus.py  test_ficus_coerce.py  test_ficus_configvalue.py  test_ficus_dump.py  test_ficus_inherit.py  test_ficus_load.py  test_ficus_parse.py  test_ficus_readonly.py  test_ficus_toml.py  test_format.py  test_from_the_wild.py  test_inherit.py  test_inheritance.py  test_load.py  test_parse.py  test_readonly.py  test_sample_doc.py  test_structs.py  test_toml.py  test_validation.py  test_walk.py
test/docs/: config_coerce.txt
test/samples/: config_coerce.txt  config_toml.toml  inheritance_sample.ini
workbench/: conficus_2_a.idraw
