[metadata]
name = ficus
version = 0.1.1

[wheel]
universal = True

[pylint]
disable = missing-docstring,invalid-name

[flake8]
statistics = True
exclude =
ignore=E123,E501
max-line-length = 80
max-complexity = 7
# show-source = True
tee = True
output-file = .flake8.log

[tool:pytest]
addopts=--verbose --strict --cov=ficus --cov-report=term-missing

[coverage:run]
source = ficus
omit = */format.py

[coverage:paths]
[coverage:report]
