[metadata]
name = conficus
version = 0.1.1

[wheel]
universal = True

[pylint]
disable = missing-docstring,invalid-name

[flake8]
statistics = True
#exclude =
ignore=E123,E501
max-line-length = 80
max-complexity = 7
#show-source = True
tee = True
#output-file = .flake8.log

[tool:pytest]
addopts=-vv --strict --cov=conficus --cov-report=term-missing

[coverage:run]
source = conficus
omit = */format.py

[coverage:paths]
source=
    src/conficus
    .tox/*/lib/python*/site-packages/attr
    .tox/pypy*/site-packages/attr

[coverage:report]
show_missing = true
